# tetris

./: .gitignore  Makefile  README  README.md  blog.md  build.sh  catalog.md  setup.sh
scripts/: shared_scripts.sh
src/console_target/: CMakeLists.txt  build.sh
src/console_target/learn/: tools.md
src/core/: main.cpp
src/core/include/: test.hpp
src/ios-core/: main.m
targets/console/: CMakeLists.txt  build.sh  setup.sh
targets/ios/: Tetris.xcconfig  build.sh  project.yml  setup.sh
targets/macos/: project.yml  setup.sh
